Added data persistence functionality